--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -2,13 +2,13 @@
   url: /
   external: false
 
-- title: archive
-  url: /archive/
-  external: false
-
-- title: about
-  url: /about/
+- title: Research
+  url: /research/
   external: false # set true if you using external link, see below
+
+- title: Publications
+  url: /publications/
+  external: false
 
 # Example:
 # - title: github
