--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -6,6 +6,10 @@
   url: /research/
   external: false # set true if you using external link, see below
 
+-title: Team
+  url: /team/
+  external: false
+
 - title: Publications
   url: /publications/
   external: false
