--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ mode: light # default theme "dark" | "light"
 author:
   name: SU GROUP # author name
   bio: >- # tell to the world
-    We aim to create game-changing multiscale computational capability to enable a priori solutions for emerging multiscale technologies.
+    We aim to create game-changing multiscale computational capability to enable a priori knowledge for emerging multiscale technologies.
   username: username # general username
   github: github_username # github username
   twitter: twitter_username # twitter username
