--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -6,9 +6,9 @@
   url: /research/
   external: false # set true if you using external link, see below
 
--title: team
-  url: /team/
-  external: false
+#-title: team
+#  url: /team/
+#  external: false
 
 - title: publications
   url: /publications/
