--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -2,7 +2,7 @@
   url: /
   external: false
 
-- title: research
+- title: Research
   url: /research/
   external: false # set true if you using external link, see below
 
