--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,4 +1,5 @@
 menu:
+- {name: 'Home', url: '/'}
 - {name: 'people', url: '/people'}
 - {name: 'publications', url: '/publications'}
 - {name: 'courses', url: '/courses'}
