--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,9 +1,9 @@
 menu:
 - {name: 'Home', url: '/'}
-- {name: 'people', url: '/people'}
-- {name: 'publications', url: '/publications'}
-- {name: 'courses', url: '/courses'}
-- {name: 'cv', url: '/cv'}
+- {name: 'Team', url: '/people'}
+- {name: 'Publications', url: '/publications'}
+#- {name: 'courses', url: '/courses'}
+#- {name: 'cv', url: '/cv'}
 - {name: 'contact', url: '/contact'}
 
 people:
