--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,7 +1,7 @@
 featured:
 - {name: 'Fast convergence and asymptotic preserving of the general synthetic iterative scheme.',
    author: 'W Su, L Zhu, L Wu',
-   journel: 'SIAM Journal on Scientific Computing',
+   journal: 'SIAM Journal on Scientific Computing',
    volume: '42(6): B1517-B1540',
    year: '2020',
    url: '/publications/1501.07274.pdf'}
