--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,250 +1,26 @@
 featured:
-  - {title: 'Fast convergence and asymptotic preserving of the general synthetic iterative scheme.',
-   author: 'W Su, L Zhu, L Wu',
-   journal: 'SIAM Journal on Scientific Computing',
-   volume: '42(6): B1517-B1540',
-   year: '2020',
-   src: '/publications/J20.pdf',
-   doi: 'https://doi.org/10.1137/20M132691X'}
-
-  - {title: ' Can we find steady-state solutions to multiscale rarefied gas flows within dozens of iterations?',
-   author: 'W Su, L Zhu, P Wang, Y Zhang, L Wu',
-   journal: 'Journal of Computational Physics',
-   volume: '407: 109245',
-   year: '2020',
-   src: '/publications/J15.pdf',
-   doi: 'https://doi.org/10.1016/j.jcp.2020.109245'}
-
-  - {title: 'Implicit discontinuous Galerkin method for the Boltzmann equation with full collision operator.',
-   author: 'W Su, P Wang, Y Zhang, L Wu',
-   journal: 'Journal of Scientific Computing',
-   volume: '82: 39',
-   year: '2020',
-   src: '/publications/J16.pdf',
-   doi: 'https://doi.org/10.1007/s10915- 020-01139-7'}
+  - {title: '',
+   author: '',
+   journal: '',
+   volume: '',
+   year: '',
+   src: '',
+   doi: ''}
 
 journal:
-  - {title: 'Temperature jump and Knudsen layer in rarefied molecular gas.',
-   author: 'W Su, Q Li, Y Zhang, L Wu',
-   journal: 'Physics of Fluids',
-   volume: '34: 032010',
-   year: '2022',
-   src: '/publications/J24.pdf',
-   doi: 'https://doi.org/10.1063/5.0086076'}
-
-  - {title: 'Multiscale simulation of molecular gas flows by the general synthetic iterative scheme.',
-   author: 'W Su, Y Zhang, L Wu',
-   journal: 'Computer Methods in Applied Mechanics and Engineering',
-   volume: '373: 113548',
-   year: '2021',
-   src: '/publications/J23.pdf',
-   doi: 'https://doi.org/10.1016/j.cma.2020.113548'}
-
-  - {title: 'Uncertainty quantification in rarefied dynamics of molecular gas: rate effect of thermal relaxation.',
-   author: 'Q Li, J Zeng, W Su, L Wu',
-   journal: 'Journal of Fluid Mechanics',
-   volume: '917: A58',
-   year: '2021',
-   src: '/publications/J22.pdf',
-   doi: 'https://doi.org/10.1017/jfm.2021.338'}
-
-  - {title: 'General synthetic iterative scheme for nonlinear gas kinetic simulation of multi-scale rarefied gas flows.',
-   author: 'L Zhu, X Pi, W Su, Z Li, Y Zhang, L Wu',
-   journal: 'Journal of Computational Physics',
-   volume: '430: 110091',
-   year: '2021',
-   src: '/publications/J21.pdf',
-   doi: 'https://doi.org/10.1016/j.jcp.2020.110091'}
-
-  - {title: 'Fast convergence and asymptotic preserving of the general synthetic iterative scheme.',
-   author: 'W Su, L Zhu, L Wu',
-   journal: 'SIAM Journal on Scientific Computing',
-   volume: '42(6): B1517-B1540',
-   year: '2020',
-   src: '/publications/J20.pdf',
-   doi: 'https://doi.org/10.1137/20M132691X'}
-
-  - {title: 'Thermal transpiration in molecular gas',
-   author: 'P Wang, W Su, L Wu',
-   journal: 'Physics of Fluids',
-   volume: '32: 082005',
-   year: '2020',
-   src: '/publications/J19.pdf',
-   doi: 'https://doi.org/10.1063/5.0018505'}
-
-  - {title: 'GSIS: an efficient and accurate numerical method to obtain the apparent gas permeability of porous media.',
-   author: 'W Su, M T Ho, Y Zhang, L Wu',
-   journal: 'Computers & Fluids',
-   volume: '206: 104576',
-   year: '2020',
-   src: '/publications/J18.pdf',
-   doi: 'https://doi.org/10.1016/j.compfluid.2020.104576'}
-
-  - {title: 'Rarefied flow separation in microchannel with bends.',
-   author: 'M T Ho, J Li, W Su, L Wu, M Borg, Y Zhang',
-   journal: 'Journal of Fluid Mechanics',
-   volume: '901: A26',
-   year: '2020',
-   src: '/publications/J17.pdf',
-   doi: 'https://doi.org/10.1017/jfm.2020.585'}
-
-  - {title: 'Implicit discontinuous Galerkin method for the Boltzmann equation with full collision operator.',
-   author: 'W Su, P Wang, Y Zhang, L Wu',
-   journal: 'Journal of Scientific Computing',
-   volume: '82: 39',
-   year: '2020',
-   src: '/publications/J16.pdf',
-   doi: 'https://doi.org/10.1007/s10915- 020-01139-7'}
-
-  - {title: ' Can we find steady-state solutions to multiscale rarefied gas flows within dozens of iterations?',
-   author: 'W Su, L Zhu, P Wang, Y Zhang, L Wu',
-   journal: 'Journal of Computational Physics',
-   volume: '407: 109245',
-   year: '2020',
-   src: '/publications/J15.pdf',
-   doi: 'https://doi.org/10.1016/j.jcp.2020.109245'}
-
-  - {title: 'High-order hybridizable discontinuous Galerkin method for the gas kinetic equation.',
-   author: 'W Su, P Wang, Y Zhang',
-   journal: 'International Journal of Computational Fluid Dynamics',
-   volume: '33: 335-342',
-   year: '2019',
-   src: '/publications/J14.pdf',
-   doi: 'https://doi.org/10.1080/10618562.2019.1666110'}
-
-  - {title: 'Heat and mass transfer of oscillatory lid-driven flow in the continuum, transition and free molecular flow regimes.',
-   author: 'P Wang, W Su, L Zhu, Y Zhang',
-   journal: 'International Journal of Heat and Mass Transfer',
-   volume: '131: 291-300',
-   year: '2019',
-   src: '/publications/J13.pdf',
-   doi: 'https://doi.org/10.1016/j.ijheatmasstransfer.2018.11.060'}
-
-  - {title: 'Accurate and efficient computation of the Boltzmann equation for Couette flow: influence of intermolecular potentials on Knudsen layer function and viscous slip coefficient.',
-   author: 'W Su, P Wang, H Liu, L Wu',
-   journal: 'Journal of Computational Physics',
-   volume: '378: 573-590',
-   year: '2019',
-   src: '/publications/J12.pdf',
-   doi: 'https://doi.org/10.1016/j.jcp.2018.11.015'}
-
-  - {title: 'A high-order hybridizable discontinuous Galerkin method with fast convergence to steady-state solutions of the gas kinetic equation.',
-   author: 'W Su, P Wang, Y Zhang, L Wu',
-   journal: 'Journal of Computa- tional Physics',
-   volume: '376: 973-991',
-   year: '2019',
-   src: '/publications/J11.pdf',
-   doi: 'https://doi.org/10.1016/j.jcp.2018.08.050'}
-
-  - {title: 'Oscillatory rarefied gas flow inside a three dimensional rectan- gular cavity.',
-   author: 'P Wang, W Su, Y Zhang',
-   journal: 'Physics of Fluids',
-   volume: '30: 102002',
-   year: '2018',
-   src: '/publications/J10.pdf',
-   doi: 'https://doi.org/10.1063/1.5052253'}
-
-  - {title: 'State-specific modeling of vibrational relaxation and nitric oxide formation in shock-heated air.',
-   author: 'W Su, D Bruno, Y Babou',
-   journal: 'Journal of Thermophysics and Heat Transfer',
-   volume: '32: 337-352',
-   year: '2018',
-   src: '/publications/J9.pdf',
-   doi: 'https://doi.org/10.2514/1.T5271'}
-
-  - {title: 'Rarefaction throttling effect: Influence of the bend in micro-channel gaseous flow.',
-   author: 'W Liu, G Tang, W Su, L Wu, Y Zhang',
-   journal: 'Physics of Fluids',
-   volume: '30: 082002',
-   year: '2018',
-   src: '/publications/J8.pdf',
-   doi: 'https://doi.org/10.1063/1.5037430'}
-
-- {title: 'Nonlinear oscillatory rarefied gas flow inside a rectangular cavity.',
-   author: 'P Wang, L Zhu, W Su, L Wu, Y Zhang',
-   journal: 'Physical Review E',
-   volume: '97: 043103',
-   year: '2018',
-   src: '/publications/J7.pdf',
-   doi: 'https://doi.org/10.1103/PhysRevE.97.043103'}
-
-- {title: 'Rarefaction cloaking: Influence of the fractal rough surface in gas slider bearings.',
-   author: 'W Su, H Liu, Y Zhang, L Wu',
-   journal: 'Physics of Fluids',
-   volume: '29: 102003',
-   year: '2017',
-   src: '/publications/J6.pdf',
-   doi: 'https://doi.org/10.1063/1.4999696'}
-
-- {title: 'Comparative study of the discrete velocity and lattice Boltzmann methods for rarefied gas flows through irregular channels.',
-   author: 'W Su, S Lindsay, H Liu, L Wu',
-   journal: 'Physical Review E',
-   volume: '96: 023309',
-   year: '2017',
-   src: '/publications/J5.pdf',
-   doi: 'https://doi.org/10.1103/PhysRevE.96.023309'}
-
-- {title: 'Stable Runge-Kutta discontinuous Galerkin solver for hypersonic rarefied gaseous flows based on 2D Boltzmann kinetic equations.',
-   author: 'W Su, Z Tang, B He, G Cai',
-   journal: 'Applied Mathematics and Mechanics',
-   volume: '38: 343-362',
-   year: '2017',
-   src: '/publications/J4.pdf',
-   doi: 'https://doi.org/10.1007/s10483-017-2177-8'}
-
-- {title: 'A parallel Runge-Kutta discontinuous Galerkin solver for rarefied gas flows based on 2D Boltzmann kinetic equations.',
-   author: 'W Su, A Alexeenko, G Cai',
-   journal: 'Computers & Fluids',
-   volume: '109: 123-136',
-   year: '2015',
-   src: '/publications/J3.pdf',
-   doi: 'https://doi.org/10.1016/j.compfluid.2014.12.015'}
-
-- {title: 'Extension of the low diffusion particle method for near-continuum two-phase flow simulations.',
-   author: 'W Su, X He, G Cai',
-   journal: 'Chinese Journal of Aeronautics',
-   volume: '26: 37-46',
-   year: '2013',
-   src: '/publications/J2.pdf',
-   doi: 'https://doi.org/10.1016/j.cja.2012.12.010'}
-
-- {title: 'Theoretical development for DSMC local time stepping technique.',
-   author: 'G Cai, W Su, F Hou',
-   journal: 'Science China: Technological Sciences',
-   volume: '55: 2750-2756',
-   year: '2012',
-   src: '/publications/J1.pdf',
-   doi: 'https://doi.org/10.1007/s11431-012-4913-7'}
+  - {title: '',
+   author: '',
+   journal: '',
+   volume: '',
+   year: '',
+   src: '',
+   doi: ''}
 
 conference:
-- {title: 'Investigations of vibrational kinetic relaxation within air shock wave plasma',
-   author: 'W Su, D Bruno, Y Babou',
-   conf: '10th International Conference on Aerophysics and Physical Mechanics of Classical and Quantum Systems',
-   year: '2016',
-   volume: 'Journal of Physics: Conference Series, 815: 012026',
-   src: '/publications/C4.pdf',
-   doi: 'https://doi.org/10.1088/1742-6596/815/1/012026'}
-
-- {title: 'Vibrational specific simulation of nonequilibrium radiation from shock-heated air.',
-   author: 'W Su, D Bruno, Y Babou',
-   conf: '30th International Symposium on Rarefied Gas Dynamics',
-   year: '2016',
-   volume: 'AIP Conference Proceedings, 1786: 150001',
-   src: '/publications/C3.pdf',
-   doi: 'https://doi.org/10.1063/1.4967642'}
-
-- {title: 'A stable Runge-Kutta discontinuous Galerkin solver for hypersonic rarefied gaseous flows.',
-   author: 'W Su, B He, G Cai',
-   conf: '29th International Symposium on Rarefied Gas Dynamics',
-   year: '2014',
-   volume: 'AIP Conference Proceedings, 1628: 980-987',
-   src: '/publications/C2.pdf',
-   doi: 'https://doi.org/10.1063/1.4902700'}
-
-- {title: 'A Runge-Kutta discontinuous Galerkin solver for 2D Boltz- mann model equations: verification and analysis of computational performance.',
-   author: 'W Su, A Alexeenko, G Cai',
-   conf: '28th International Symposium on Rarefied Gas Dynamics',
-   year: '2012',
-   volume: 'AIP Conference Proceedings, 1501: 381-388',
-   src: '/publications/C1.pdf',
-   doi: 'https://doi.org/10.1063/1.4769547'}
+- {title: '',
+   author: '',
+   conf: '',
+   year: '',
+   volume: '',
+   src: '',
+   doi: ''}
