--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -21,7 +21,7 @@ featured:
    volume: '82: 39',
    year: '2020',
    src: '/publications/J16.pdf',
-   doi: 'https://doi.org/10.1007/s10915- 020-01139-7'}
+   doi: 'https://doi.org/10.1007/s10915-020-01139-7'}
 
 journal:
   - {title: '',
